--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^15.6.1",
     "react-gravatar": "^2.6.3",
     "react-helmet": "^5.1.3",
+    "react-markdown": "^3.3.2",
     "react-scroll": "^1.7.3",
     "react-share": "^1.15.1",
     "react-social-icons": "^2.7.0",
