--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash-webpack-plugin": "^0.11.4",
     "moment": "^2.20.1",
     "ramda": "^0.25.0",
+    "rc-pagination": "^1.16.4",
     "react": "^15.6.1",
     "react-disqus-comments": "^1.0.3",
     "react-dom": "^15.6.1",
@@ -41,7 +42,8 @@
     "react-scroll": "^1.7.3",
     "react-share": "^1.15.1",
     "react-social-icons": "^2.7.0",
-    "react-twitter-widgets": "^1.4.0"
+    "react-twitter-widgets": "^1.4.0",
+    "smoothscroll-polyfill": "^0.4.3"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
