--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 language: node_js
 node_js:
   - "9"
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
+install:
+  - yarn
+  - yarn clean
+  - yarn build:pp
 
 deploy:
   provider: pages
+  local-dir: public
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  github-token: $GITHUB_TOKEN
   keep-history: true
   on:
-    branch: master
+    branch: develop
