--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 deploy:
   provider: pages
   local-dir: public
+  fqdn: urbanli.ch
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
